# lrcfetch-tui

./: Cargo.toml  LICENSE  PKGBUILD.proto  README.md
.github/workflows/: main.yml  rust.yml
src/: main.rs  musicdata.rs
