[package]
name = "lrcfetch"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
metaflac = "0.2.8"
ratatui = "0.29.0"
reqwest = "0.12.24"
ron = "0.11.0"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.47.2", features = ["rt-multi-thread", "fs", "macros"] }
